tests/fixtures/negative/54_vec_push_type_failure.yc
fn main() {
    values := Vec<i32>{}
    values.push("invalid")
}
